# thor_mang_simulation

./: thor_op_simulation.rosinstall
thor_mang_fake_ft_sensor/: CMakeLists.txt  CMakeLists.txt.user.2e11c74  package.xml
thor_mang_fake_ft_sensor/include/thor_mang_fake_ft_sensor/: thor_mang_fake_ft_sensor.h  thor_mang_fake_ft_sensor_node.h
thor_mang_fake_ft_sensor/src/: thor_mang_fake_ft_sensor.cpp  thor_mang_fake_ft_sensor_node.cpp
thor_mang_fake_walking/: CMakeLists.txt  package.xml
thor_mang_fake_walking/include/thor_mang_fake_walking/: thor_mang_fake_walking.h
thor_mang_fake_walking/launch/: fake_walking.launch
thor_mang_fake_walking/src/: thor_mang_fake_walking.cpp  thor_mang_fake_walking_node.cpp
thor_mang_gazebo/: 30.thor_mang_gazebo.bash.em  CMakeLists.txt  package.xml
thor_mang_gazebo/config/: position_controller.yaml
thor_mang_gazebo/launch/: door_task.launch  empty_world.launch  fake_ft_sensors.launch  gazebo.launch  hector_multisensor_head_controller.launch  johnny5.launch  pick_up.launch  position_controller.launch  spawn_thor_mang_default.launch  spawn_thor_vt_hand_default.launch  start_all.launch  start_empty_world.launch  start_onboard_all.launch  start_realsense_tf_publisher.launch  start_thor_mang_default_all_onboard.launch  start_thor_mang_default_with_controllers.launch  start_thor_mang_door_task.launch  thormang3.launch
thor_mang_gazebo/models/DRC_drill/: model.config  model.sdf
thor_mang_gazebo/models/DRC_drill/meshes/: DRC_drill.dae  DRC_drill.dae.bkp  DRC_drill.stl
thor_mang_gazebo/scripts/: unpause_gazebo.sh
thor_mang_gazebo/urdf/: johnny5.gazebo  johnny5.xacro  thormang3.gazebo
thor_mang_gazebo/worlds/: cylinder_on_table.world  door.world  drill_on_table.world  dynamixel.world  empty.world  geometric_shapes.world  geometric_shapes_indoor.world  pick_up.world  pick_up_cylinder.world  plateau_x125_d1000_h100.world  plateau_x125_d1000_h50.world  plateau_x125_d500_h100.world  plateau_x125_d500_h50.world  slope_x-200_a-6.world  slope_x110_a-6.world  stairs4_x125_d250_h100.world  stairs4_x125_d250_h150.world  stairs4_x125_d250_h30.world  stairs4_x125_d250_h50.world  test_plate_Fz_ctrl.world
thor_mang_gazebo_ros_control/: CMakeLists.txt  package.xml  thor_mang_hw_sim_plugins.xml
thor_mang_gazebo_ros_control/config/: default_controllers.yaml  position_trajectory_controllers.yaml  test_controllers.yaml  thor_mang_velocity_controllers.yaml  thor_vt_data_sim.yaml
thor_mang_gazebo_ros_control/include/thor_mang_gazebo_ros_control/: thor_mang_robot_hw_sim.h
thor_mang_gazebo_ros_control/launch/: default_controllers.launch  test_controllers.launch  thor_mang_default_controllers.launch  thor_mang_hands_default_controllers.launch
thor_mang_gazebo_ros_control/launch/hands/: l_vt_hand_controllers.launch  r_vt_hand_controllers.launch
thor_mang_gazebo_ros_control/launch/head/: hector_multisensor_head_controllers.launch
thor_mang_gazebo_ros_control/src/: thor_mang_robot_hw_sim.cpp
thor_mang_virtual_ft_sensor/: CMakeLists.txt  package.xml
thor_mang_virtual_ft_sensor/include/thor_mang_virtual_ft_sensor/: thor_mang_virtual_ft_sensor.h  thor_mang_virtual_ft_sensor_node.h
thor_mang_virtual_ft_sensor/src/: thor_mang_virtual_ft_sensor.cpp  thor_mang_virtual_ft_sensor_node.cpp
